<resources>
    <string name="app_name">Gume</string>
    <string name="app_version">v0.1.0</string>
    <string name="title_home">Home</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="settings_abouts_as_description_1">«Routie.» - ваш календарь-планнер помогающий организовать ваше время.</string>
    <string name="settings_abouts_as_description_2">\n«Routie.» - это наша попытка организовать ваше время наилучшим образом в понятном интерфейсе, помимо организации времени мы хотели создать возможности для вырабатываний привычек, потому что, правильные привычки это 100% дисциплины.\n\nМы надеемся вы сможите распланировать свое время самым удобным, продуктивным или приятным графиком.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minuts">минут</string>
    <string name="more_hours">Более часа</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="about_app">О приложении</string>
    <string name="version_about">Версия</string>
    <string name="email_debug_account">slx.mode@gmail.com</string>
    <string name="change_account">Изменить</string>
    <string name="logout_account">Выйти из аккаунта</string>
    <string name="appearance">Внешний вид</string>
    <string name="theme_app_appearance">Тема приложения</string>
    <string name="light_theme_appearance">Светлая</string>
    <string name="dark_theme_appearance">Тёмная</string>
    <string name="default_theme_appearance">Системная</string>
    <string name="add_emotion_sheet">Добавить \nнастроение</string>
    <string name="mood_sheet">НАСТРОЕНИЕ</string>
    <string name="energy_sheet">ЭНЕРГИЯ</string>
    <string name="complete_sheet">Готово</string>
    <string name="our_contacts">Наши контакты</string>
    <string name="email_our_contacts">cmd.type@gmail.com</string>
    <string name="send_our_contacts">Написать</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="behance">Behance</string>
    <string name="new_home">Новое</string>
    <string name="all_list_home">Всё</string>
    <string name="read_list_home">Уже прочитанно</string>
    <string name="recommended_list_home">Рекомендованно</string>
    <string name="anonim_user_name_profile">Анонимный пользователь</string>
    <string name="login_debug">Войти</string>
    <string name="subscription_settings">Подписка</string>
    <string name="free_pass_settings">бесплатный тариф</string>
    <string name="account_settings">Аккаунт</string>
    <string name="account_description_settings">Полное редактирование</string>
    <string name="notification_settings">Уведомления</string>
    <string name="notification_description_settings">Выберите удобное время</string>
    <string name="lang_settings">Язык</string>
    <string name="lang_description_settings">Для лучшего восприятия</string>
    <string name="about_app_settings">О приложении</string>
    <string name="about_app_description_settings">Актуальное о нас</string>
    <string name="appearance_settings">Внешний вид</string>
    <string name="appearance_description_settings">Для лучшего восприятия</string>
    <string name="uor_contacts_settings">Наши контакты</string>
    <string name="our_contacts_description_settings">Актуальное о нас</string>
    <string name="sing_in_google_debug">Sing in Google+</string>
    <string name="logout_settings">Выйти из аккаунта</string>
    <string name="statistic">Статистика</string>
    <string name="mood_statistic">Настроения</string>
    <string name="energy_statistic">Энергии</string>
    <string name="week_statistic">Неделя</string>
    <string name="two_week_statistic">2 недели</string>
    <string name="mouth_statistic">Месяц</string>
    <string name="all_time_statistic">Все время</string>
    <string name="all">Всё</string>
    <string name="notification">Уведомления</string>
    <string name="language">Язык</string>
    <string name="english_language">English</string>
    <string name="russian_language">Русский</string>
    <string name="fransis_language">Français</string>
    <string name="espanol_language">Español</string>
</resources>