<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

    <RelativeLayout
        android:id="@+id/rl_main_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"
            android:letterSpacing="-0.02"
            android:text="Настройки"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="-5dp"
            android:text="чтобы было лучше :)"
            android:textColor="@color/grey_04"
            android:textSize="32sp"
            android:fontFamily="@font/font_bold"
            android:letterSpacing="-0.02"
            />

        <RelativeLayout
            android:id="@+id/rl_block_subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_2"
            android:layout_marginTop="34dp"
            android:orientation="vertical"
            android:background="@drawable/rectangle_rounded_all_20"
            android:backgroundTint="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="10dp">
                <ImageView
                    android:id="@+id/iv_sub_image_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_star_sub_big" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_sub_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/sub_image_free" />

            <TextView
                android:id="@+id/tv_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/subscription_settings"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/font_semi_bold"
                android:letterSpacing="-0.02"/>

            <TextView
                android:id="@+id/tv_sub_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_sub_title"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/font_medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/free_pass_settings"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_block_btn_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/rl_block_subscription"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_account_btn"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_user_round"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/account_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_notification_btn"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_notifications_round"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/notification_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_block_btn_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/ll_block_btn_1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_language_btn"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_lang_round"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lang_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/lang_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about_as_btn"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="14dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_info_round"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/about_app_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_block_btn_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/ll_block_btn_2"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_appearance_btn"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_paint_circle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appearance_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/appearance_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_contacts_btn"
                android:layout_weight="1"
                android:layout_marginStart="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="14dp"
                android:background="@drawable/rectangle_rounded_all_20"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_share_circle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uor_contacts_settings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/our_contacts_description_settings"
                    android:textColor="@color/grey_05"
                    android:textSize="10sp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_block_btn_3"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/font_semi_bold"
            android:gravity="center"
            android:letterSpacing="-0.02"
            android:padding="16dp"
            android:text="@string/sing_in_google_debug"
            android:textColor="@color/grey_02"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login_debug"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="75dp"
            android:fontFamily="@font/font_semi_bold"
            android:gravity="center"
            android:letterSpacing="-0.02"
            android:padding="16dp"
            android:text="@string/logout_settings"
            android:textColor="@color/grey_02"
            android:textSize="14sp" />

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>