<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settings.ui.account.AccountFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/rl_main_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:letterSpacing="-0.02"
                android:text="Аккаунт"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/ll_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_rounded_all_12"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/font_medium"
                    android:letterSpacing="-0.02"
                    android:text="@string/email_debug_account"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_change_email_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02"
                    android:text="@string/change_account"
                    android:textColor="@color/purple_02"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_logout_profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_user_email"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="75dp"
                android:fontFamily="@font/font_semi_bold"
                android:gravity="center"
                android:letterSpacing="-0.02"
                android:padding="16dp"
                android:text="@string/logout_account"
                android:textColor="@color/grey_02"
                android:textSize="14sp" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>