<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/rl_main_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            >

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:letterSpacing="-0.02"
                android:text="О приложении"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <LinearLayout
                android:id="@+id/ll_about_as_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginTop="30dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/rectangle_rounded_all_12"
                android:backgroundTint="@color/grey_06"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_image_app"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="36dp"
                    android:src="@drawable/doge" />

                <TextView
                    android:id="@+id/tv_description_about_as_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/font_semi_bold"
                    android:letterSpacing="-0.02"
                    android:text="@string/settings_abouts_as_description_1"
                    android:textColor="@color/black_02"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_description_about_as_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/font_medium"
                    android:letterSpacing="-0.02"
                    android:text="@string/settings_abouts_as_description_2"
                    android:textColor="@color/grey_07"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_version_app_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_about_as_block"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="75dp"
                android:background="@drawable/rectangle_rounded_all_12"
                android:backgroundTint="@color/grey_06"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/font_semi_bold"
                    android:gravity="center"
                    android:letterSpacing="-0.02"
                    android:text="Версия"
                    android:textColor="@color/grey_05"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font_semi_bold"
                    android:gravity="center"
                    android:letterSpacing="-0.02"
                    android:text="@string/app_version"
                    android:textColor="@color/black_02"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>